--- a/sites/arolariu.ro/src/app/about/_components/Hero.module.scss
+++ b/sites/arolariu.ro/src/app/about/_components/Hero.module.scss
@@ -137,6 +137,11 @@
 .ctaButton {
   padding-left: space(8);
   padding-right: space(8);
+
+  // Override global a{color: hsl(var(--primary))} for asChild Link usage
+  &:any-link {
+    color: inherit;
+  }
 }
 
 .ctaIcon {
